# MinecraftConsoles

./: .gitignore  CMakeLists.txt  README.md  build-release-exclude.txt  build-release.bat
LCE.Xbox/: App.cpp  App.h  LCE.Xbox.vcxproj  Package.appxmanifest  SharedSurface.h
Minecraft.Client/: CMakeLists.txt  ClientConnection.cpp  Font.cpp  Gui.cpp  Minecraft.cpp  PendingConnection.cpp  PendingConnection.h
Minecraft.Client/Common/: App_enums.h  Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Media/: LceLive1080.swf  LceLive480.swf  LceLive720.swf  LceLiveVita.swf  MainMenu1080.swf  MainMenu480.swf  MainMenu720.swf  MainMenuVita.swf  en-EN.lang  strings.resx  xuiscene_ingameinfo.xui  xuiscene_ingameinfo_480.xui  xuiscene_ingameinfo_small.xui
Minecraft.Client/Common/Network/: PlatformNetworkManagerStub.cpp
Minecraft.Client/Common/UI/: UI.h  UIEnums.h  UILayer.cpp  UIScene.cpp  UIScene_DebugOverlay.cpp  UIScene_HUD.cpp  UIScene_InGameInfoMenu.cpp  UIScene_LceLive.cpp  UIScene_LceLive.h  UIScene_LceLiveFriends.cpp  UIScene_LceLiveFriends.h  UIScene_LceLiveInvites.cpp  UIScene_LceLiveInvites.h  UIScene_LceLiveLinking.cpp  UIScene_LceLiveLinking.h  UIScene_LceLiveRequests.cpp  UIScene_LceLiveRequests.h  UIScene_LoadOrJoinMenu.cpp  UIScene_MainMenu.cpp  UIScene_MainMenu.h  UIScene_SkinSelectMenu.cpp
Minecraft.Client/Windows64/: KeyboardMouseInput.h  Windows64_LceLive.cpp  Windows64_LceLive.h  Windows64_LceLiveP2P.cpp  Windows64_LceLiveP2P.h  Windows64_LceLiveRelay.cpp  Windows64_LceLiveRelay.h  Windows64_LceLiveSignaling.cpp  Windows64_LceLiveSignaling.h  Windows64_Log.cpp  Windows64_Log.h  Windows64_Minecraft.cpp
Minecraft.Client/Windows64/Network/: WinsockNetLayer.cpp  WinsockNetLayer.h
Minecraft.Client/cmake/sources/: Windows.cmake
Minecraft.Server/: CMakeLists.txt
Minecraft.Server/cmake/sources/: Common.cmake
Minecraft.World/: Boat.cpp  Boat.h
Minecraft.World/x64headers/: extraX64.h
Shims/AudioShim/: AudioShim.cpp  AudioShim.h  AudioShim.vcxproj  XSBParser.cpp  XSBParser.h  XWBParser.cpp  XWBParser.h
Shims/DXGIShim/: DXGIShim.cpp  DXGIShim.def  DXGIShim.h  DXGIShim.vcxproj
include/Common/: BuildVer.h
tools/: repack_media_arc.py
